# mutli-agent-ca-team

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: __init__.py  env.py
alembic/versions/: ed5d4c16937f_initial_tables.py
scripts/: create_test_data.py
src/ca_multi_agent/agents/: a11_anomaly_agent.py  a12_formatter_agent.py  a1_intent_agent.py  a3_posting_agent.py  a5_reconciliation_agent.py  a6_gst_agent.py  a7_income_tax_agent.py  a8_reconciliation_agent.py  a9_reporting_agent.py  base.py  supervisor.py
src/ca_multi_agent/api/: dependencies.py
src/ca_multi_agent/api/v1/: router.py
src/ca_multi_agent/api/v1/endpoints/: chat.py  health.py  upload.py
src/ca_multi_agent/config/: llm_config.py  settings.py
src/ca_multi_agent/db/: base.py  session.py
src/ca_multi_agent/models/: accounting.py  artifacts.py  compliance.py  document.py  reconciliation.py  tax.py  user_org.py
src/ca_multi_agent/services/: ledger_services.py  reconciliation_service.py  tax_services.py
src/ca_multi_agent/utils/: enhanced_llm.py  file_utils.py  llm.py  logging.py
src/ca_multi_agent/workflows/: nodes.py  state.py
